src/gcc-errors.log
## Error Log - Thu 2025-10-16 10:46:10 EDT ##
Render.cpp:172:5: error: conflicting declaration ‘int Walls [][7]’
  172 | int Walls[][7] =
      |     ^~~~~
In file included from Render.h:4,
                 from Render.cpp:4:
GameStructs.h:64:13: note: previous declaration as ‘wall Walls [1000]’
   64 | extern wall Walls[MAX_WALLS];
      |             ^~~~~
Render.cpp: In function ‘void sortWallsZOrder()’:
Render.cpp:212:38: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  212 |                 int wallX = (Walls[i][0] + Walls[i][3])/2;
      |                                      ^
Render.cpp:212:52: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  212 |                 int wallX = (Walls[i][0] + Walls[i][3])/2;
      |                                                    ^
Render.cpp:213:38: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  213 |                 int wallY = (Walls[i][1] + Walls[i][4])/2;
      |                                      ^
Render.cpp:213:52: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  213 |                 int wallY = (Walls[i][1] + Walls[i][4])/2;
      |                                                    ^
Render.cpp:236:59: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  236 |                                         wallSwp = Walls[j][k];
      |                                                           ^
Render.cpp:237:25: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  237 |                 Walls[j][k] = Walls[j+1][k];
      |                         ^
Render.cpp:237:41: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  237 |                 Walls[j][k] = Walls[j+1][k];
      |                                         ^
Render.cpp:238:27: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  238 |                 Walls[j+1][k] = wallSwp;
      |                           ^
Render.cpp: In function ‘void drawView()’:
Render.cpp:273:36: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  273 |                 wallX[0] = Walls[i][0];
      |                                    ^
Render.cpp:274:36: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  274 |                 wallY[0] = Walls[i][1];
      |                                    ^
Render.cpp:275:36: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  275 |                 wallZ[0] = Walls[i][2];
      |                                    ^
Render.cpp:276:36: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  276 |                 wallX[1] = Walls[i][3];
      |                                    ^
Render.cpp:277:36: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  277 |                 wallY[1] = Walls[i][4];
      |                                    ^
Render.cpp:278:36: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  278 |                 wallZ[1] = Walls[i][5];
      |                                    ^
Render.cpp:353:94: error: no match for ‘operator[]’ (operand types are ‘wall’ and ‘int’)
  353 |                 drawWall(wallX[0], wallX[1], wallY[0], wallY[1], wallY[2], wallY[3], Walls[i][6]);
      |                                                                                              ^
EngineMain.cpp: In function ‘int main(int, char**)’:
EngineMain.cpp:213:9: error: expected ‘,’ or ‘;’ before ‘loadLevel’
  213 |         loadLevel(levelFile);
      |         ^~~~~~~~~
## Error Log - Thu 2025-10-16 10:53:34 EDT ##
EngineMain.cpp: In function ‘int main(int, char**)’:
EngineMain.cpp:213:9: error: expected ‘,’ or ‘;’ before ‘loadLevel’
  213 |         loadLevel(levelFile);
      |         ^~~~~~~~~
## Error Log - Thu 2025-10-16 10:54:15 EDT ##
## Error Log - Thu 2025-10-16 10:55:37 EDT ##
## Error Log - Thu 2025-10-16 11:01:46 EDT ##
LevelFileHandling.cpp: In function ‘void loadLevel(char*)’:
LevelFileHandling.cpp:52:25: error: ‘hasSectorheader’ was not declared in this scope; did you mean ‘hasSectorHeader’?
   52 |                         hasSectorheader = true;
      |                         ^~~~~~~~~~~~~~~
      |                         hasSectorHeader
## Error Log - Thu 2025-10-16 11:02:12 EDT ##
## Error Log - Thu 2025-10-16 11:08:18 EDT ##
## Error Log - Thu 2025-10-16 11:13:27 EDT ##
## Error Log - Thu 2025-10-16 11:13:50 EDT ##
## Error Log - Thu 2025-10-16 11:25:33 EDT ##
